--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
 
     # Profile information
     name: Juan David Daza
-    tagline: Full Stack Developer
+    tagline: El mejor programador del mundo
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
